loaded changes from df19 demo org

--- a/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.cmp
+++ b/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.cmp
@@ -104,5 +104,10 @@
          </aura:if>
             
         </div>
+        <div class="reloadbutton">
+        	<a onclick="{!c.reloadbutton}">
+            	<lightning:icon iconName="action:refresh"></lightning:icon>
+            </a>
+        </div>
     </div>
 </aura:component>
