--- a/force-app/main/default/aura/orgActivityLog/orgActivityLog.cmp
+++ b/force-app/main/default/aura/orgActivityLog/orgActivityLog.cmp
@@ -3,6 +3,7 @@
     <aura:attribute name="eventType" type="String" />
     <aura:attribute name="modal" type="Boolean" default="false" />
     <aura:attribute name="modalImage" type="String" default="" />
+    <aura:attribute name="showVehicleInspector" type="Boolean" default="false" />
     <lightning:empApi aura:id="empApi" />
     <aura:handler name="init" value="{!this}" action="{!c.onInit}" />
 
@@ -26,12 +27,15 @@
             <div class="slds-backdrop slds-backdrop_open"></div>
             
         </aura:if>
-    <lightning:card class="slds-p-around_medium" title="Org Activity Log">
+    <lightning:layout>
+    	<lightning:layoutItem flexibility="auto">
+            <lightning:card class="slds-p-around_medium" title="Org Activity Log">
         <lightning:input aura:id="channel" label="channel" name="channel" type="text" value="/event/general_message__e" />
         <div class="slds-p-vertical_medium">
             <lightning:button label="Subscribe" onclick="{! c.subscribe }" />
             <lightning:button label="Unsubscribe" onclick="{! c.unsubscribe }" disabled="{!empty(v.subscription)}" />
             <lightning:button label="fire test event" variant="success" onclick="{! c.firetestevent }" />
+            <lightning:button label="vehicle inspector" variant="brand" onclick="{! c.toggleVehicleInspector }" />
 		</div>
         <aura:iteration items="{!v.events}" var="event">
             <aura:if isTrue="{!v.eventType == '/event/general_message__e'}">
@@ -172,6 +176,20 @@
 
 
     </lightning:card>
+        </lightning:layoutItem>
+        <aura:if isTrue="{!v.showVehicleInspector}">
+        	<lightning:layoutItem size="4" class="slds-m-left_medium">
+                <c:idBuzzIoT tirePressureEvent="/event/vehicle_event__e" eventParameter="tire_pressure__c" minPressure="1050"/>
+                <!--
+            <lightning:card class="slds-p-around_medium" title="Vehicle Inspector">
+                yo
+            </lightning:card>
+				-->
+        </lightning:layoutItem>
+        </aura:if>
+        
+    </lightning:layout>
+    
 
 
 </aura:component>
