--- a/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
+++ b/force-app/main/default/aura/DE_Custom_Theme/DE_Custom_Theme.css
@@ -1,10 +1,3 @@
-
-
-
-
-
-
-
 /*--------------- Volkswagen addon --------------- */
 
 /* Body styling */
@@ -161,4 +154,10 @@
     margin: 20px 15px;
     border: 1px solid #dfe4e0;
     box-shadow: 0 0 8px 1px rgba(15,34,80,.05);
+}
+
+.THIS .reloadbutton {
+    position:fixed;
+    left: 16px;
+    bottom: 16px;
 }
