--- a/force-app/main/default/aura/TestdriveModalContent/TestdriveModalContent.cmp
+++ b/force-app/main/default/aura/TestdriveModalContent/TestdriveModalContent.cmp
@@ -68,23 +68,7 @@
                     </div>
                 </div>
 
-                <!--
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:dayview" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        <lightning:formattedDateTime value="{!v.testdrive.Date}" year="numeric" month="2-digit" day="2-digit" weekday="long" />
-                    </div>
-                </div>
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:clock" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        <lightning:formattedDateTime value="{!v.testdrive.Date}" hour="2-digit" minute="2-digit" />&nbsp;-&nbsp;<lightning:formattedDateTime value="{!v.testdrive.EndDate}" hour="2-digit" minute="2-digit" />
-                    </div>
-                </div>
+          
                 -->
 
 
@@ -120,35 +104,7 @@
                       <input type="text" placeholder="{!v.testdrive.Driver__r.MailingStreet + ', ' + v.testdrive.Driver__r.MailingCity}" disabled="true" class="slds-input" />
                     </div>
                 </div>
-                <!--
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:checkin" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        Pickup at customer's home
-                    </div>
-                </div>
-                
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:location" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        <a> {!v.testdrive.Driver__r.MailingStreet}<br />
-                            {!v.testdrive.Driver__r.MailingPostalCode}&nbsp;{!v.testdrive.Driver__r.MailingCity}<br />
-                            {!v.testdrive.Driver__r.MailingCountry}
-                        </a>
-                    </div>
-                </div>
-                -->
-
-                <div class="map vw-map-comp">
-                    <!--<lightning:map 
-                        mapMarkers="{! v.mapMarkers }" 
-                        zoomLevel="{!v.zoomLevel}" />-->
-                    <img src="{!$Resource.wayToJohn}" />
-                </div>
+        
             </div>
             <!-- Test Drive Details //-->
             <div class="slds-row slds-size_1-of-3 slds-p-around_medium border-right">
@@ -176,32 +132,7 @@
                     </div>
                 </div>
 
-                <!--
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:travel_and_places" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        <a>{!v.testdrive.Configuration__r.model__c}</a>
-                    </div>
-                </div>
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:palette" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        {!v.testdrive.Configuration__r.edition__c}
-                    </div>
-                </div>
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:settings" size="xx-small" />
-                    </div>
-                    <div class="icon-text">
-                        {!v.testdrive.Configuration__r.motor__c}
-                    </div>
-                </div>
-                -->
+        
                 
                 <div class="image-block">
                     <img src="{!$Resource.vwDemoPackFiles + '/images/van.png'}" />
@@ -223,28 +154,10 @@
 
                     </div>
                 </div>
-                <!--
-                <div class="infoblock">
-                	<div class="icon">
-                        <lightning:icon iconName="utility:logout" size="xx-small" />
-                    </div>
 
-                    <aura:if isTrue="{!v.testdrive.assigned_Vehicle__r.License_Plate__c}">
-                    <div class="icon-text">
-                        {!v.testdrive.assigned_Vehicle__r.License_Plate__c}&nbsp;&nbsp;&nbsp;<a>change</a>
-                    </div>  
-                    <aura:set attribute="else">
-                    <div class="icon-text-placeholder">
-                        none
-                    </div>    
-                    </aura:set>
-                    </aura:if> 
-                </div>
-                    -->
-                <!--<aura:if isTrue="{!not(v.testdrive.assigned_Vehicle__r)}">-->
                 <div class="button-block">
-                        <c:vwButton buttonType="primary"  label="Assign Vehicle"  onclick="{! c.callAssignVehicle }"></c:vwButton>
-                    <!--<lightning:button label="Assign Vehicle" title="Assign Vehicle" onclick="{! c.callAssignVehicle }"/>-->
+                        <!-- <c:vwButton buttonType="primary"  label="Assign Vehicle"  onclick="{! c.callAssignVehicle }"></c:vwButton> -->
+                    <lightning:button label="Assign Vehicle" variant="brand" title="Assign Vehicle" onclick="{! c.callAssignVehicle }"/>
                 </div>
                 <!--</aura:if>-->
             </div>
